--- a/payment-receiver/.golangci.yml
+++ b/payment-receiver/.golangci.yml
@@ -1,24 +1,38 @@
-// TODO: implement
 run:
-  timeout: 5m
+  timeout: 2m
   tests: true
+  skip-dirs:
+    - vendor
+
+output:
+  formats:
+    - github-actions
 
 linters:
   enable:
     - govet
     - errcheck
-    - staticcheck
-    - gosimple
-    - unused
-    - structcheck
-    - deadcode
-    - gofmt
-    - goimports
     - revive
-    - ineffassign
+    - staticcheck
+    - unused
+
+linters-settings:
+  revive:
+    ignore-generated-header: true
+    severity: warning
+    rules:
+      - name: exported
+        severity: warning
+      - name: package-comments
+        severity: warning
+      - name: unused-parameter
+        severity: warning
 
 issues:
   exclude-use-default: false
-
-output:
-  format: colored-line-number
+  max-issues-per-linter: 0
+  max-same-issues: 0
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - errcheck
