Update test code for usecase

--- a/payment-receiver/.golangci.yml
+++ b/payment-receiver/.golangci.yml
@@ -1,12 +1,12 @@
 run:
   timeout: 2m
   tests: true
-  skip-dirs:
+  exclude-dirs:
     - vendor
 
 output:
   formats:
-    - github-actions
+    - colored-line-number
 
 linters:
   enable:
