--- a/payment-receiver/Dockerfile.dispatcher
+++ b/payment-receiver/Dockerfile.dispatcher
@@ -4,11 +4,10 @@ WORKDIR /app
 COPY . .
 
 RUN go mod tidy
-RUN go build -o main ./cmd
+RUN go build -o main ./cmd/dispatcher
 
 FROM golang:1.24.2 AS run
 WORKDIR /app
 COPY --from=build /app/main .
 
-EXPOSE 8080
 CMD ["./main"]
