--- a/payment-processor/.editorconfig
+++ b/payment-processor/.editorconfig
@@ -19,6 +19,7 @@ csharp_style_expression_bodied_methods = true:suggestion
 csharp_style_namespace_declarations = file_scoped:suggestion
 csharp_prefer_braces = true:suggestion
 csharp_indent_case_contents = true
+csharp_space_between_new_and_parentheses = true
 
 # StyleCop: disable verbose comments
 dotnet_diagnostic.SA1600.severity = none
@@ -26,6 +27,8 @@ dotnet_diagnostic.SA1601.severity = none
 dotnet_diagnostic.SA1604.severity = none
 dotnet_diagnostic.SA1609.severity = none
 dotnet_diagnostic.SA1633.severity = none
+dotnet_diagnostic.SA1000.severity = none
+dotnet_diagnostic.SA1118.severity = none
 
 # Misc
 dotnet_diagnostic.SA1122.severity = none
