--- a/payment-processor/src/PaymentProcessor/appsettings.json
+++ b/payment-processor/src/PaymentProcessor/appsettings.json
@@ -2,7 +2,9 @@
   "Redis": {
     "Host": "localhost",
     "Port": 6379,
-    "Queue": "payment-events"
+    "Queue": "payment-events",
+    "Group": "payment-group",
+    "ReadCount": 1
   },
   "Database": {
     "ConnectionString": "Host=localhost;Port=5432;Username=user;Password=password;Database=payment"
