--- a/docker-compose.dispatcher.yml
+++ b/docker-compose.dispatcher.yml
@@ -10,7 +10,7 @@ services:
       - migrate
     environment:
       REDIS_ADDR: redis:6379
-      REDIS_QUEUE: outbox-events
+      REDIS_QUEUE: payment-events
       POSTGRES_DSN: postgres://user:password@postgres:5432/payment?sslmode=disable
 
   migrate:
