--- a/payment-processor/Makefile
+++ b/payment-processor/Makefile
@@ -5,6 +5,10 @@ SLN=payment-processor.sln
 PROJECT=src/PaymentProcessor/payment-processor.csproj
 TEST_PROJECT=tests/PaymentProcessor.Tests/PaymentProcessor.Tests.csproj
 
+# Proto
+PROTO_SRC_DIR=../payment-receiver/gen/proto
+PROTO_OUT_DIR=src/Protos
+
 # Build the project
 build:
 	dotnet build $(SLN)
@@ -29,5 +33,17 @@ lint:
 restore:
 	dotnet restore $(SLN)
 
+# Proto
+gen-proto:
+	@echo "Generating C# code from proto..."
+	@if ! command -v protoc &> /dev/null; then \
+		echo "Error: protoc not found. Please install protoc."; \
+		exit 1; \
+	fi
+	@mkdir -p $(PROTO_OUT_DIR)
+	@for proto in $(PROTO_SRC_DIR)/*.proto; do \
+		protoc --proto_path=$(PROTO_SRC_DIR) --csharp_out=$(PROTO_OUT_DIR) $$proto; \
+	done
+
 # CI job (used in GitHub Actions)
-ci: restore format-check lint test
+ci: restore gen-proto format-check lint test
