--- a/.github/workflows/ci-dispatcher.yml
+++ b/.github/workflows/ci-dispatcher.yml
@@ -51,6 +51,17 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
           echo "$HOME/go/bin" >> $GITHUB_PATH
 
+      - name: Install Protobuf and plugins
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+
+      - name: Generate Protobuf files
+        run: make generate
+
       - name: Format check
         run: make fmt
 
