--- a/.github/workflows/ci-webhook-integration-test.yml
+++ b/.github/workflows/ci-webhook-integration-test.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'payment-receiver/**'
       - '.github/workflows/ci-webhook-integration-test.yml'
+
 env:
   POSTGRES_DSN: postgres://user:password@localhost:5432/payment?sslmode=disable
 
@@ -44,6 +45,34 @@ jobs:
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
           sudo mv migrate /usr/local/bin/migrate
+
+      - name: Install protoc and Go plugin
+        run: |
+          curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v27.1/protoc-27.1-linux-x86_64.zip
+          unzip protoc-27.1-linux-x86_64.zip -d protoc
+          sudo mv protoc/bin/protoc /usr/local/bin/
+          sudo cp -r protoc/include /usr/local/
+          sudo chmod +x /usr/local/bin/protoc
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.34
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3
+          echo "$HOME/go/bin" >> $GITHUB_PATH  # Ensure installed binaries are in PATH
+
+      - name: Generate Go code from .proto
+        run: |
+          mkdir -p payment-receiver/gen/proto
+          shopt -s nullglob
+          files=(payment-receiver/gen/proto/*.proto)
+          if [ ${#files[@]} -gt 0 ]; then
+            for proto in "${files[@]}"; do
+              protoc \
+                --proto_path=payment-receiver/gen/proto \
+                --go_out=payment-receiver/gen/proto \
+                --go-grpc_out=payment-receiver/gen/proto \
+                "$proto"
+            done
+          else
+            echo "No .proto files found. Skipping code generation."
+          fi
 
       - name: Wait for PostgreSQL to be ready
         run: |
